--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,8 @@
 	<body>
 		{% include "_partials/_header.html.twig" %}
 		{% include "_partials/_flashMessages.html.twig" %}
+		{% include "_partials/_successModal.html.twig" %}
+
 
 
 
