--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,6 +52,9 @@
 				<h3 class="mb-3">Vos coordonnées</h3>
 				<div class="form-row">
 					<div class="form-group col-md-6">
+					<p class="p-1 disclaimer fw-light">«
+							<span class="req">*</span>
+							» indique les champs obligatoires pour l’instruction de la demande. En cas de défaut de réponse à un d’entre eux, la Police Municipale ne sera pas en mesure d’assurer la surveillance de votre domicile.</p>
 						{{ form_row(form.civility) }}
 						{{ form_row(form.otherCivility) }}
 
@@ -319,6 +322,20 @@
 					<button type="button" class="btn btn-secondary mt-3 btn_previous">Retour</button>
 					<button id="submit" type="submit" class="btn btn-success mt-3">Soumettre</button>
 				</div>
+				<div class="">
+                <hr>
+                    <p class="disclaimer fw-light">
+                    La Ville de Marcq-en-Barœul est responsable du traitement. Les informations recueillies par le biais de ce formulaire (ou demande en ligne) font l’objet d’un traitement informatisé ayant pour seul finalité de répondre à votre demande d’inscription  afin d’assurer la gestion et le suivi de l’Opération Tranquillité Vacances (et éventuellement vous avertir en cas de nécessité). Ces informations font l’objet d’un traitement informatisé destiné à la surveillance  des habitations  inoccupées pendant les vacances (gestion des tournées).
+                    La base légale de ce traitement est la mission d’intérêt public. Ce traitement de données relève de l’exercice de l’autorité publique dont est investie la Ville de Marcq-en-Barœul en application du RGPD ;
+                    Les données collectées sont communiquées aux seuls destinataires concernés par le traitement , en l’occurrence et eux seuls,  les agents habilités de la Police Municipale. 
+                    Les données ne sont pas transférées en dehors de l’Union Européenne ni transmises à des tiers. 
+                    Les données nécessaires aux inscriptions et fiches d’interventions de l’Opération Tranquillité Vacances sont conservées pendant une durée de 2 ans à compter de leur réception et seront ensuite supprimées . Des bilans sont conservés aux fins statistiques sur l’opération.
+                    Conformément au Règlement Général sur la Protection des Données à caractère personnel entré en vigueur le 25 mai 2018 et à la loi du 6 janvier 1978 modifiée, vous pouvez accéder aux données vous concernant, et demander leur rectification ou leur effacement sous certaines conditions. Vous pouvez également obtenir la limitation du traitement de ces données ou vous opposer à ce traitement pour un motif légitime.  
+                    Vous pouvez exercer ces droits directement auprès du Responsable de traitement, ou de sa Déléguée à la protection des données à l’adresse suivante : rgpd@marcq-en-baroeul.fr ou un courrier à l’adresse postale Hôtel de Ville de Marcq-en-Barœul, 103, Avenue Foch BP 44029 59704 Marcq-en-Barœul
+                    Pour en savoir plus sur la gestion de vos données personnelles, vous pouvez consulter la politique de confidentialité du site de la Ville de Marcq-en-Barœul.
+                    Si après nous avoir contactés, vous estimez que vos droits sur vos données ne sont pas respectés, vous pouvez adresser une réclamation auprès de la CNIL.
+                    </p>
+                 </div>
 			</div>
 		</div>
 
@@ -327,6 +344,5 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/autoComplete.min.js"></script>
 <script src="{{ asset('assets/js/addressAuto.js') }}"></script>
-{# <script src="{{ asset('assets/js/formSubmit.js') }}"></script> #}
 <script src="{{ asset('assets/js/form.js') }}"></script>
-{# <script type="module" src="{{ asset('assets/js/successModal.js') }}"></script> #}{% endblock %}
+{% endblock %}
