--- a/public/assets/style/app.css
+++ b/public/assets/style/app.css
@@ -37,10 +37,26 @@ h1 {
   color: red;
 }
 
-
 .shadowBox {
   box-shadow: 0px 0px 4px 3px rgba(178, 178, 178, 0.2);
 }
+
+/* Message de succès après envoi du formulaire */
+ hr {
+  border: #6c757da6 solid 0.5px !important;
+}
+
+.flash {
+  width: 500px;
+}
+
+.linkToForm {
+  text-decoration: none;
+  color:#495057;
+  font-weight: 700 ;
+}
+
+
 
 /* liste de choix adresse */
 #autoComplete_list_1 {
