--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,8 +28,7 @@
 	</head>
 	<body>
 		{% include "_partials/_header.html.twig" %}
-		{% include "_partials/_flashMessages.html.twig" %}
-		{% include "_partials/_successModal.html.twig" %}
+		{# {% include "_partials/_successModal.html.twig" %} #}
 
 
 
