--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,7 +34,7 @@
 
 <div class="container-fluid center-form">
 	<div
-		class="shadowBox pt-5 pl-5 pr-5 m-5 card">
+		class="shadowBox pt-5 pl-5 pr-5 mr-5 mb-5 ml-5 mt-3 card">
 		<!-- Formulaire avec les sections -->
 		{{ form_start(form, { 'attr': {'id': 'otvForm'} }) }}
 		{{ form_errors(form) }}
